--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,16 +8,13 @@ topics:
   - storage
   - sheets
   - spreadsheet
-
 environment:
   sdk: ">=3.0.0 <4.0.0"
-
 dependencies:
-  archive: ^3.0.0
-  xml: ">=5.0.0 <7.0.0"
-  collection: ^1.15.0
-  equatable: ^2.0.0
-
+  archive: 4.0.2
+  xml: 6.5.0
+  collection: 1.19.1
+  equatable: 2.0.7
 dev_dependencies:
-  test: ^1.23.0
-  lints: ^2.1.0
+  test: 1.25.15
+  lints: 5.1.1
